fix overflow i think

--- a/frontend/src/components/Spots/spots.css
+++ b/frontend/src/components/Spots/spots.css
@@ -8,12 +8,14 @@ img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    overflow: hidden;
 }
 
 #spots-container {
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
+    overflow: hidden;
     padding: 2rem 1rem;
 }
 
